Update reproducer